# project-vscode-remote

./: .gitignore  README.md
.devcontainer/: devcontainer.json  setup.sh
multi-elf/: main.c  test.c
single-proj/: CMakeLists.txt
